crates/sourcepawn_lsp/tests/text_document/signature_help/snapshots/main__text_document__signature_help__function_2.snap
---
source: crates/sourcepawn_lsp/tests/text_document/signature_help/mod.rs
assertion_line: 21
expression: "signature_help(r#\"\n%! main.sp\nvoid foo(int bar) {\n    foo();\n        |\n        ^\n}\n\n\"#)"
---
{
  "signatures": [
    {
      "label": "void foo(int bar)",
      "parameters": [
        {
          "label": "bar"
        }
      ],
      "activeParameter": 0
    }
  ],
  "activeParameter": 0
}
